--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-.metadata/
-**/.metadata/**
-/.metadata/
-/.metadata/**
+.metadata/**
 .metadata/.plugins/org.eclipse.cdt.core/I2C_Scanner.1574446778118.pdom
